--- a/public/popup.html
+++ b/public/popup.html
@@ -19,7 +19,7 @@
 
 
 		<label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="switch-1">
-			<input type="checkbox" id="switch-1" name="specialChars" class="mdl-switch__input" checked data-special-char>
+			<input type="checkbox" id="switch-1" name="specialChars" class="mdl-switch__input" data-special-char>
 			<span class="mdl-switch__label">Sonderzeichen</span>
 		</label>
 
