default is now using special chars

--- a/public/popup.html
+++ b/public/popup.html
@@ -13,13 +13,13 @@
 		<label data-slider="passwordLength">
 			<span data-slider-value-out></span> Zeichen gesamt
 			<p>
-				<input class="mdl-slider mdl-js-slider" data-slider-value max="128" min="12" name="length" type="range">
+				<input class="mdl-slider mdl-js-slider" data-slider-value max="128" min="8" name="length" type="range">
 			</p>
 		</label>
 
 
 		<label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="switch-1">
-			<input type="checkbox" id="switch-1" name="specialChars" class="mdl-switch__input" data-special-char>
+			<input type="checkbox" id="switch-1" name="specialChars" class="mdl-switch__input" checked data-special-char>
 			<span class="mdl-switch__label">Sonderzeichen</span>
 		</label>
 
