adding entropy bit output and resolving issue #8

--- a/public/popup.html
+++ b/public/popup.html
@@ -22,6 +22,9 @@
 			<input type="checkbox" id="switch-1" name="specialChars" class="mdl-switch__input" checked data-special-char>
 			<span class="mdl-switch__label">Sonderzeichen</span>
 		</label>
+		<p>
+			Entropy Bits: <span data-entropy-bits>0</span>
+		</p>
 
 		<div data-password-generator>
 			<button data-create class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
