--- a/public/popup.html
+++ b/public/popup.html
@@ -6,59 +6,49 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link href="main.css" rel="stylesheet">
 </head>
-<body style="width: 300px;">
+<body data-slider="passwordLength" data-password-generator>
 
-
-<div class="slider-wrapper mdl-grid" data-slider="passwordLength">
-	<div class="mdl-cell mdl-cell--2-col">
-		<span data-slider-value-out></span>
-		<i class="material-icons" id="length">text_rotation_none</i>
-
-		<div class="mdl-tooltip" data-mdl-for="length">
-			Password Length
-		</div>
-	</div>
-	<div class="mdl-cell mdl-cell--stretch">
-		<p>
-			<input class="mdl-slider mdl-js-slider" data-slider-value max="128" min="8" name="length" type="range">
-		</p>
-	</div>
+<div class="row row--full-width">
+	Passwort Länge: <span data-slider-value-out></span>
+</div>
+<div class="row row--max-width">
+	<input class="mdl-slider mdl-js-slider" data-slider-value max="128" min="8" name="length" type="range">
 </div>
 
-
-<div class="slider-wrapper mdl-grid">
-	<div class="mdl-cell mdl-cell--3-col">
+<div class="row row--full-width">
+	<div class="column column--space-right">
+		<img src="omega.svg" id="omega" />
+		<div class="mdl-tooltip" data-mdl-for="omega">
+			Sonderzeichen
+		</div>
+	</div>
+	<div class="column column--space-right-large" style="width: 36px;">
 		<label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="switch-1">
 			<input type="checkbox" id="switch-1" name="specialChars" class="mdl-switch__input" checked data-special-char>
-			<span class="mdl-switch__label">Sonderzeichen</span>
 		</label>
 	</div>
-	<div class="mdl-cell mdl-cell--stretch">
-		Entropy Bits: <span data-entropy-bits>0</span>
+	<div class="column" style="line-height: 24px;">
+		Entropie Bits: <span data-entropy-bits>0</span>
 	</div>
 </div>
-
-
-<div class="slider-wrapper mdl-grid" data-password-generator>
-	<div class="mdl-cell mdl-cell--3-col">
-		<button data-create class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--primary">
-			Generate Password
+<div class="row row--full-width">
+	<div class="column column--space-right">
+		<button
+			data-create
+			class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--primary"
+			style="width: 240px;text-transform: none;">
+			create
 		</button>
-		<input data-generated-password name="password" readonly type="text">
-		<i class="material-icons hidden" id="not-pwnd" data-not-pwnd>done</i>
-		<div class="mdl-tooltip" data-mdl-for="not-pwnd">
-			Not Pwnd
-		</div>
-		<i class="material-icons hidden" id="pwnd" data-pwnd>done</i>
-		<div class="mdl-tooltip" data-mdl-for="pwnd">
-			Pwnd!
-		</div>
-
-		<button data-copy-password>Copy password</button>
-
 	</div>
-	<div class="mdl-cell mdl-cell--stretch">
+	<div class="column column--align-right">
+		<i class="material-icons hidden" id="not-pwnd" data-not-pwnd style="font-size: 30px;">done</i>
+		<div class="mdl-tooltip" data-mdl-for="not-pwnd">Not Pwnd</div>
+		<i class="material-icons hidden" id="pwnd" data-pwnd style="font-size: 30px;">close</i>
+		<div class="mdl-tooltip" data-mdl-for="pwnd">Pwnd!</div>
 	</div>
+
+
+	<input data-generated-password name="password" readonly type="text" style="position: absolute;top: -100px;">
 </div>
 
 
