--- a/public/popup.html
+++ b/public/popup.html
@@ -9,7 +9,7 @@
 <body data-slider="passwordLength" data-password-generator>
 
 <div class="row row--full-width">
-	Passwort Länge: <span data-slider-value-out></span>
+	Passwortlänge: <span data-slider-value-out></span>
 </div>
 <div class="row row--max-width">
 	<input class="mdl-slider mdl-js-slider" data-slider-value max="128" min="8" name="length" type="range">
