--- a/public/popup.html
+++ b/public/popup.html
@@ -36,7 +36,7 @@
 		<button
 			data-create
 			class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--primary"
-			style="width: 240px;text-transform: none;">
+			style="width: 240px;text-transform: none;white-space: nowrap;overflow:hidden;display:inline-block;text-overflow: ellipsis;">
 			create
 		</button>
 	</div>
