added refresh possibility

--- a/public/popup.html
+++ b/public/popup.html
@@ -30,6 +30,12 @@
 	<div class="column" style="line-height: 24px;">
 		Entropie Bits: <span data-entropy-bits>0</span>
 	</div>
+	<div class="column column--space-left-large" data-refresh>
+		<img src="refresh.svg" id="refresh" />
+		<div class="mdl-tooltip" data-mdl-for="refresh">
+			Refresh
+		</div>
+	</div>
 </div>
 <div class="row row--full-width">
 	<div class="column column--space-right">
