--- a/public/popup.html
+++ b/public/popup.html
@@ -9,7 +9,7 @@
 <body data-slider="passwordLength" data-password-generator>
 
 <div class="row row--full-width">
-	Passwortlänge: <span data-slider-value-out></span>
+	Password length: <span data-slider-value-out></span>
 </div>
 <div class="row row--max-width">
 	<input class="mdl-slider mdl-js-slider" data-slider-value max="128" min="8" name="length" type="range">
@@ -19,7 +19,7 @@
 	<div class="column column--space-right">
 		<img src="omega.svg" id="omega" />
 		<div class="mdl-tooltip" data-mdl-for="omega">
-			Sonderzeichen
+			Special characters
 		</div>
 	</div>
 	<div class="column column--space-right-large" style="width: 36px;">
@@ -28,7 +28,7 @@
 		</label>
 	</div>
 	<div class="column" style="line-height: 24px;">
-		Entropie Bits: <span data-entropy-bits>0</span>
+		Entropie bits: <span data-entropy-bits>0</span>
 	</div>
 	<div class="column column--space-left-large" data-refresh>
 		<img src="refresh.svg" id="refresh" />
